# OOPlab9

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example1.py  example2.py  example3.py  example4.py
src/: make.py
src/task_package/: zad.py
tests/: test_zad.py
